--- a/data/Ipotesi/Regole.tex
+++ b/data/Ipotesi/Regole.tex
@@ -102,7 +102,7 @@ Questo tipo di assenza andrebbe discussa con più attenzione e soprattutto anche
 
 \subsection{Realismo stronzo}
 
-La quinta edizione di D\&D non è bilanciata intorno all'idea di una battaglia per riposo lungo, i personaggi hanno semplicemente troppe opzioni e si finisce per trascurare l'importante fattore di gestione delle risorse che giustifica la minore versatilità dei combattenti rispetto agli incantatori, ma allo stesso tempo giocare qualcosa come 5 o 6 incontri al giorno può risultare estenuante. Per questo io preferisco implementare la regola del \textit{Realismo Crudo}: un riposo breve richiede 8 ore e un riposo lungo richiede una settimana.
+La quinta edizione di D\&D non è bilanciata intorno all'idea di una battaglia per riposo lungo, i personaggi hanno semplicemente troppe opzioni e si finisce per trascurare l'importante fattore di gestione delle risorse che giustifica la minore versatilità dei combattenti rispetto agli incantatori, ma allo stesso tempo giocare qualcosa come 5 o 6 incontri al giorno può risultare estenuante. Per questo io preferisco implementare la regola del \textit{Realismo Crudo}: un riposo breve richiede 8 ore e un riposo lungo richiede una settimana. \\ A meno che non sia specificato il contrario dal DM, le regole dei dadi vita sono da rispettare.
 
 \subsection{Dadi esplosivi}
 
@@ -142,3 +142,4 @@ Il sistema della CA in D\&D di quinta edizione è sicuramente una buona simulazi
 
 \subsection{Divisioni e arrotondamenti}
 A meno di specifiche contrarie, tutti gli arrotondamenti da fare a seguito di una divisione sono per difetto.
+
