--- a/data/Ipotesi/Regole.tex
+++ b/data/Ipotesi/Regole.tex
@@ -138,7 +138,7 @@ Non sempre nelle campagne di D\&D si bada alla salute mentale dei personaggi, ma
 Un riposo breve o mangiare una bacca di \textit{Bacche Benefiche} (al massimo una per riposo breve) cura 1 punto Follia, un riposo lungo ne cura 3, \textit{Ristorare Inferiore} ne cura 5 e \textit{Ristorare Superiore} porta al limite superiore del livello precedente, \textit{Parola del Potere Guarire} cura tutti i punti Follia a meno che non siano 50 o più e l'effetto di \textit{Desiderio} può riportare alla normalità qualunque livello di Follia.
 
 \subsection{Soglia di Danno}
-Il sistema della CA in D\&D di quinta edizione è sicuramente una buona simulazione del combattimento, ma ci sono momenti in cui secondo me fallisce nelle sue premesse logiche. \\ Normalmente durante il combattimento l'interpretazione della CA è l'abilità di un personaggio di schivare o parare un attacco. Tuttavia nel caso di creature dalle proporzioni gargantuesche come il Terrasque ad esempio, non ha senso parlare di attacchi che le "manchino", perchè logicamente parlando mi sembrerebbe abbastanza difficile non colpire una creatura così grande. \\ Per questo ho deciso di stabilire una soglia di danno per alcune creature: la CA di queste armature sarà sicuramente molto bassa, ma se il danno (dopo il calcolo delle resistenze) di un singolo attacco (tre attacchi vanno conteggiati separatamente) è inferiore alla soglia di danno, non viene inflitto alcun danno. \\ Ho inoltre deciso di ribilanciare alcune abilità o opzioni dei personaggi intorno a questa regola, come avrete modo di vedere. 
+Il sistema della CA in D\&D di quinta edizione è sicuramente una buona simulazione del combattimento, ma ci sono momenti in cui secondo me fallisce nelle sue premesse logiche. \\ Normalmente durante il combattimento l'interpretazione della CA è l'abilità di un personaggio di schivare o parare un attacco. Tuttavia nel caso di creature dalle proporzioni gargantuesche come il Terrasque ad esempio, non ha senso parlare di attacchi che le "manchino", perchè logicamente parlando mi sembrerebbe abbastanza difficile non colpire una creatura così grande. \\ Per questo ho deciso di stabilire una soglia di danno per alcune creature: la CA di queste armature sarà sicuramente molto bassa, ma se il danno (dopo il calcolo delle resistenze) di un singolo attacco (tre attacchi vanno conteggiati separatamente) è inferiore alla soglia di danno, non viene inflitto alcun danno. \\ Oltre a quella descritta sopra, che chiamerei soglia di danno "istanziale" si possono specificare altri tipi, ad esempio soglia di danno per azione o per turno. \\ Ho inoltre deciso di ribilanciare alcune abilità o opzioni dei personaggi intorno a questa regola, come avrete modo di vedere. 
 
 \subsection{Divisioni e arrotondamenti}
 A meno di specifiche contrarie, tutti gli arrotondamenti da fare a seguito di una divisione sono per difetto.
