--- a/data/Personaggi/Stregone.tex
+++ b/data/Personaggi/Stregone.tex
@@ -16,9 +16,12 @@ La magia di uno Stregone è istintiva, deriva dal suo talento e dalle sue emozio
 Il numero massimo di punti stregoneria di uno Stregone è pari al suo livello da Stregone + il suo bonus di competenza
 
 \subsection{Opzioni di metamagia}
+Innanzitutto, si possono usare più opzioni di metamagia nello stesso turno a meno che non specifichino esse stesse un costo in azioni et cetera.
+
+\subsubsection{Incantesimo reattivo}
+Lo Stregone può spendere 4 punti stregoneria per lanciare un incantesimo di 3° livello o inferiore (anche lanciato a livello più alto) come reazione ma durante il suo turno. Questa opzione può essere usata solo una volta per round.
 
 \subsubsection*{Incantesimo leggendario}
-
 Lo Stregone può spendere 4 punti stregoneria per lanciare un incantesimo di 3° livello o inferiore (anche lanciato a livello più alto) come azione leggendaria (ovvero in qualsiasi momento del round). Questa opzione può essere usata solo una volta per round.
 
 \section{Dinastia di Analisti}
@@ -46,9 +49,9 @@ A partire dal 6° livello, un numero di volte pari a metà del suo bonus di comp
 
 A partire dal 14° livello, l'Analista inizia ad interessarsi all'Analisi complessa e impara a vedere la realtà come si presenta davvero, reale e immaginaria. \\ Ottiene \textit{Vista Pura} nel raggio di 18 m.
 
-\subsection{Limite all'Infinito}
+\subsection{Massimo globale}
 
-A partire dal 18° livello, all'inizio del suo turno lo Stregone può spendere tutti i suoi punti stregoneria (Almeno 13) per sovraccaricarsi di energia magica. \\ Fino alla fine dello stesso turno, tutti i tiri per i danni da lui inflitti sono massimizzati (a meno di TS superati) e tutti gli incantesimi da lui lanciati che richiedono un tiro per colpire colpiscono automaticamente.
+A partire dal 18° livello, all'inizio del suo turno lo Stregone può spendere 13 punti stregoneria per sovraccaricarsi di energia magica come azione gratuita. \\ Fino alla fine dello stesso turno, tutti i tiri per i danni da lui inflitti sono massimizzati (a meno di TS superati) e tutti gli incantesimi da lui lanciati che richiedono un tiro per colpire colpiscono automaticamente.
 
 \section{Cavaliere della Trama}
 \textit{Questa origine stregonesca non è di mia invenzione, è un'origine homebrew piuttosto popolare che includo e ribilancio qui al fine di includerla nelle mie campagne}
