ribilanciamento scudo ed esilio

--- a/data/Personaggi/Incantesimi.tex
+++ b/data/Personaggi/Incantesimi.tex
@@ -1,5 +1,14 @@
 \chapter{Incantesimi}
 
+\section{Incantesimi modificati}
+
+\subsection{Scudo}
+Il bonus della CA garantito da Scudo non è più un +5 ma pari al bonus di compentenza dell'incantatore che lo lancia.
+
+\subsection{Esilio}
+All'inizio di ogni suo turno, la creatura esiliata può ripetere il tiro salvezza su Carisma per liberarsi. \\ Inoltre, durante la durata dell'incantesimo, la creatura si trova ancora sul piano dell'incantatore, ma è considerata trattenuta.
+\paragraph{Ai livelli superiori} Quando l'incantatore lancia questo incantesimo usando uno slot incantesimo di 5° livello o superiore, la durata diminuisce di 12 secondi (2 turni) per ogni slot di livello superiore al 4°. Al 9° livello la durata è istantanea. \\ Indipendentemente dal livello dello slot usato, può essere esiliata solo una creatura alla volta.
+
 \section{Lista degli incantesimi espansa}
 
 \DndDropCapLine{L}{}a più grande fonte di flessibilità in D\&D è la gargantuesca lista di incantesimi fornita dal \textit{Manuale del Giocatore}, per non parlare delle innumerevoli espansioni presenti negli altri manuali ufficiali. \\ Detto questo, sembra che giocatori e dungeon master non facciano altro che aggiungere incantesimi su incantesimi, non ce la si fa più. Figuriamoci se io e i miei giocatori non ne abbiamo aggiunti a nostra volta.
