--- a/data/Personaggi/Incantesimi.tex
+++ b/data/Personaggi/Incantesimi.tex
@@ -3,9 +3,9 @@
 \section{Incantesimi modificati}
 
 \subsection{Esilio}
-All'inizio di ogni suo turno, la creatura esiliata può ripetere il tiro salvezza su Carisma per liberarsi. \\ Inoltre, durante la durata dell'incantesimo, la creatura si trova ancora sul piano dell'incantatore, ma è considerata trattenuta.
+All'inizio di ogni suo turno, la creatura esiliata può ripetere il tiro salvezza su Carisma per liberarsi. \\ Inoltre, durante la durata dell'incantesimo, la creatura si trova ancora sul piano dell'incantatore, ma è considerata trattenuta. \\ Al termine "naturale" dell'incantesimo, la creatura torna nel suo piano d'origine. Se si trova già sul suo piano d'origine, viene esiliata in un semipiano innocuo (può fare ritorno soltanto con incantesimi, oggetti o privilegi che permettono di passare tra due piani). 
 \paragraph{Ai livelli superiori} Quando l'incantatore lancia questo incantesimo usando uno slot incantesimo di 5° livello o superiore, la durata diminuisce di 12 secondi (2 turni) per ogni slot di livello superiore al 4°. Al 9° livello la durata è istantanea. \\ Indipendentemente dal livello dello slot usato, può essere esiliata solo una creatura alla volta.
-\paragraph{Nota bene} Molti DM sono piuttosto \textit{laissez faire} nei confronti della componente materiale di \textit{Esilio}, ma non sarà questo il caso sotto la mia direzione. \textit{Esilio} anche con questi nerf è comunque un incantesimo potentissimo, in grado di eliminare (almeno funzionalmente) creature ben al di fuori della portata di un incantatore di 7° livello, quindi è giusto richiedere una componente materiale molto specifica per alcune creature particolarmente potenti.
+\paragraph{Nota bene} Molti DM sono piuttosto \textit{laissez faire} nei confronti della componente materiale di \textit{Esilio}, ma non sarà questo il caso sotto la mia direzione. \\ \textit{Esilio} anche con questi nerf è comunque un incantesimo potentissimo, in grado di eliminare (almeno funzionalmente) creature ben al di fuori della portata di un incantatore di 7° livello, quindi è giusto richiedere una componente materiale molto specifica per alcune creature particolarmente potenti.
 
 \subsection{Scudo}
 Il bonus della CA garantito da \textit{Scudo} non è più un +5 ma pari al bonus di compentenza dell'incantatore che lo lancia.
