--- a/Guida.tex
+++ b/Guida.tex
@@ -56,6 +56,8 @@
 
 \input{data/Ipotesi/Regole.tex}
 
+\input{data/Ipotesi/Azioni.tex}
+
 \part{Opzioni per i personaggi}
 
 \input{data/Personaggi/Razze.tex}
