--- a/data/Eovras/Mythrenwald.tex
+++ b/data/Eovras/Mythrenwald.tex
@@ -23,7 +23,7 @@ Nessuno è mai riuscito a scalare l'Albero fino alla cima della chioma o a volar
 
 \subsection{Il borgo di Mythrenberg}
 
-Nella radura intorno al Grande Albero sorge il borgo di Mythrenberg, sede del Circolo delle Stelle e nucleo abitato più grande della foresta. Mythrenberg sicuramente non è grande come una città volante dei forgiati, o nemmeno come il grande porto di Romboporto, ma c'è tutto quello che serve per condurre una vita pacifica.
+Nella radura intorno al Grande Albero sorge il borgo di Mythrenberg, sede del Circolo della Luna e nucleo abitato più grande della foresta. Mythrenberg sicuramente non è grande come una città volante dei forgiati, o nemmeno come il grande porto di Romboporto, ma c'è tutto quello che serve per condurre una vita pacifica.
 
 \subsubsection{La sede del Circolo} Nulla di particolare, un edificio dalle dimensioni relativamente contenute dotato di un dormitorio, una mensa, uno scriptorium e una sala riunioni per il consiglio degli anziani.
 
@@ -81,14 +81,9 @@ Sono in pochi coloro che sanno che in realtà Halimath è giunto a Eovras quando
       % Traits
 
       \DndMonsterAction{Tratti di classe}
-      Halimath è un Monaco dell'Ombra Redenta di 20° livello e un Druido del Circolo delle Stelle di 20° livello. Possiede tutti i tratti garantitigli da queste due classi.
+      Halimath è un Monaco dell'Ombra Redenta di 20° livello e un Monaco della via del Sè astrale di 20° livello. Possiede tutti i tratti garantitigli da queste due classi.
 
-      \DndMonsterAction{Incantesimi}
-      Halimath è un druido di 20° livello. Conosce tutti gli incantesimi da druido. Recupera i suoi slot dopo ogni riposo lungo. La CD del tiro salvezza contro questi incantesimi è 25.
-      \begin{DndTable}[header=Slot per livello]{XXXXXXXXX}
-        1° & 2° & 3° & 4° & 5° & 6° & 7° & 8° & 9°\\
-        8  & 6  & 6  & 4  & 3  & 2  & 2  & 1  & 1 \\
-      \end{DndTable}
+      \DndMonsterAction{Incantesimi}Halimath è un incantatore di 20° livello, possiede gli slot incantesimo appropriati e conosce tutti gli incantesimi da Druido. Recupera i suoi slot dopo ogni riposo lungo. La CD del tiro salvezza contro questi incantesimi è 25 e il bonus al tiro per colpire con questi incantesimi è di 17.
   
       \DndMonsterSection{Azioni}
       \DndMonsterAction{Multiattacco}
@@ -114,23 +109,23 @@ Sono in pochi coloro che sanno che in realtà Halimath è giunto a Eovras quando
   
       % Legendary Actions
       \DndMonsterSection{Punti ki}
-      Halimath possiede 32 punti ki che può usare per i poteri di un Monaco dell'Ombra Redenta di 20° livello.
+      Halimath possiede 52 punti ki che può usare per i poteri di un Monaco dell'Ombra Redenta di 20° livello e di un Monaco della via del Sé Astrale di 20° livello.
     \end{multicols}
 \end{DndMonster}
 
 \subsection{I Druidi di Mythrenwald}
 
-La foresta di Mythrenwald, per quanto antica e potente, non è invincibile di fronte a ogni minaccia, per questo secoli fa, dopo la prima terrificante Guerra di Eovras, un gruppo di rifugiati trovatisi al cospetto del grande Albero decise di votare la propria vita alla protezione della foresta... nacque il Circolo Druidico delle Stelle.
+La foresta di Mythrenwald, per quanto antica e potente, non è invincibile di fronte a ogni minaccia, per questo secoli fa, dopo la prima terrificante Guerra di Eovras, un gruppo di rifugiati trovatisi al cospetto del grande Albero decise di votare la propria vita alla protezione della foresta... nacque il Circolo Druidico della Luna.
 
 \subsubsection{I principi del Circolo}
 
-\paragraph{Protezione della Foresta} Il più fondamentale dei compiti di un druido del Circolo delle Stelle è proteggere la foresta di Mythrenwald, sia contro le minacce immediate (ad esempio un dragonide con il raffreddore) sia contro quelle più remote. Non è raro trovare druidi di Mythrenwald in giro per il mondo per cercare di sfatare eventi o conflitti che possano mettere in pericolo la foresta.
+\paragraph{Protezione della Foresta} Il più fondamentale dei compiti di un druido del Circolo della Luna è proteggere la foresta di Mythrenwald, sia contro le minacce immediate (ad esempio un dragonide con il raffreddore) sia contro quelle più remote. Non è raro trovare druidi di Mythrenwald in giro per il mondo per cercare di sfatare eventi o conflitti che possano mettere in pericolo la foresta.
 
 \paragraph{Protezione della vita} Oltre a proteggere la foresta in particolare, i druidi di Mythrenwald nel corso dei loro viaggi devono sempre mantenere una condotta che minimizzi i danni nei confronti della vita che li circonda, qualunque sia la sua natura.
 
 \paragraph{Rispetto della morte} Ogni druido sa che vita e morte sono due facce della stessa medaglia, da onorare con la stessa dignità. Un druido di Mythrenwald è tenuto anche ad amministrare i riti funebri di ogni creatura che incontri la morte lungo il suo stesso cammino.
 
-\paragraph{Studio della corteccia e del cielo} La conoscenza incisa sul Grande Albero di Mythrenbaum e il suo riscontro astronomico sono le risorse più importanti per un drudio del Circolo delle Stelle, dalle quali egli trae consiglio e forza. Tra il ritorno da un viaggio e la partenza per un altro, un druido di Mythrenwald deve passare almeno una settimana a studiare le rune della corteccia e il cielo notturno.
+\paragraph{Studio della corteccia e del cielo} La conoscenza incisa sul Grande Albero di Mythrenbaum e il suo riscontro astronomico sono le risorse più importanti per un drudio del Circolo della Luna, dalle quali egli trae consiglio e forza. Tra il ritorno da un viaggio e la partenza per un altro, un druido di Mythrenwald deve passare almeno una settimana a studiare le rune della corteccia e il cielo notturno.
 
 \paragraph{Accoglienza e ospitalità} Il Circolo è nato da un gruppo di rifugiati in cerca di una casa, questo non deve essere mai dimenticato. Chiunque voglia unirsi è bene accetto, come ogni viaggiatore in cerca di ospitalità, indipendentemente dalla sua razza o dalle sue origni.
 
@@ -207,7 +202,7 @@ La foresta di Mythrenwald, per quanto antica e potente, non è invincibile di fr
 
 \subsection{La struttura del Circolo}
 
-Sebbene in origine il Circolo delle Stelle fosse un'associazione piuttosto disorganizzata, col tempo è andata costituendosi una struttura gerarchica basata sulla conoscenza delle rune della corteccia.
+Sebbene in origine il Circolo della Luna fosse un'associazione piuttosto disorganizzata, col tempo è andata costituendosi una struttura gerarchica basata sulla conoscenza delle rune della corteccia.
 
 \paragraph{Il Grande Guardiano} Il capo del Circolo, il più saggio tra i Druidi con la più profonda coscienza dei segreti della foresta. Nella storia di Mythrenwald ci sono stati solo due Grandi Guardiani: Samalas Mythrenwachter, ormai deceduto da almeno un millennio, e Halimath Selevarum, l'attuale Guardiano.
 
