--- a/data/Personaggi/Talenti.tex
+++ b/data/Personaggi/Talenti.tex
@@ -1,9 +1,21 @@
 \chapter{Talenti}
 
+
+\subsection{Campo Soprannaturale}
+\paragraph{Campo Soprannaturale} Fintanto che il personaggio è cosciente, intorno a lui nel raggio di 27 metri sono attivi gli effetti di una \textit{Regione Soprannaturale} a sua scelta determinata tra quelle a pagina 150 del \textit{Calderone Omnicomprensivo di Tasha}, escludendo il \textit{Fulgore Benedetto}, quando acquisisce questo talento.
+\paragraph{Inneschi} Gli effetti casuali del campo si attivano come specificato per quella regione.
+\paragraph{Privilegio} In base alla regione scelta, il personaggio ottiene dei privilegi grazie alla sua sintonia con essa:
+\subparagraph*{Infestazione} Il personaggio è permanentemente sotto l'effetto dell'incantesimo \textit{Movimenti del Ragno}. Inoltre è immune alla condizione di spaventato quando imposta da dei ragni o insetti.\\
+\subparagraph*{Luoghi Infestati} Una volta per riposo lungo, il personaggio può lanciare su di sè l'incantesimo \textit{Invisibilità Superiore} senza usare componenti o slot incantesimo. Inoltre è immune alla condizione di spaventato quando imposta da dei fantasmi.\\
+\subparagraph*{Magia Sfibrata} Il personaggio è immune agli incantesimi di Divinazione, sia avversari che alleati che i suoi stessi, e a tutte le forme di localizzazione o individuazione magica.\\
+\subparagraph{Reame Remoto} I pensieri del personaggio risultano espressi in una lingua incomprensibile a chiunque tenti di leggerli, a meno che il personaggio non sia consenziente. Inoltre è immune alla condizione di spaventato quando imposta da delle aberrazioni.\\
+\subparagraph*{Risonanza Psichica} Il personaggio può comunicare telepaticamente con le creature che è in grado di vedere, anche senza rivelare di essere la sorgente della comunicazione.\\
+\subparagraph*{Zona Specchio} Un numero di volte pari al suo bonus di competenza per riposo lungo, il personaggio può usare un'azione bonus per scambiarsi di posto con una creatura umanoide di taglia comparabile che egli sia in grado di vedere.\\
+\paragraph{Precisazione} A mio parere, quando una creatura attraverso un effetto di una di queste regioni ottiene la capacità di usare un privilegio o lanciare un incantesimo, è molto più divertente tenere a mente che non lo sa. Ad esempio, se uscisse un risultato di 96-100 come effetto della regione di \textit{Magia Sfibrata}, il personaggio non sarebbe a conoscenza di essere in grado di lanciare una volta l'incantesimo \textit{Desiderio}, e potrebbe ritrovarsi a sprecare questa chance o usarla in modo stupido, ad esempio con un "Come vorrei..." retorico.
+
 \subsection{Negazione divina}
 
-\paragraph{Prerequisiti}Essere un negoziante nell'esercizio della sua protezione.
+\paragraph{Prerequisiti}Essere un negoziante nell'esercizio della sua professione e nella protezione della sua attività.
 \paragraph{Aumento dei punteggi di caratteristica} Fintanto che i requisiti di questo talento sono soddisfatti, i punteggi di caratteristica del personaggio diventano tutti 20.
 \paragraph{Competenze bonus}Fintanto che i requisiti di questo talento sono soddisfatti, il personaggio diventa competente in tutte le abilità.
 \paragraph{Parola del Potere: No}Fintanto che i requisiti di questo talento sono soddisfatti, il personaggio può lanciare l'incantesimo di 10° livello \textit{Parola del Potere: No} a volontà senza spendere componenti materiali o slot incantesimo.
-
