--- a/data/Personaggi/Bardo.tex
+++ b/data/Personaggi/Bardo.tex
@@ -8,3 +8,10 @@
 
 Ogni volta che il bardo effettua una prova di caratteristica, un tiro salvezza o un tiro per colpire, tira due volte e deve usare il risultato più lontano da 10; se il risultato del dado è minore di 10, sottrae il suo modificatore, mentre se è maggiore di 10 lo aggiunge normalmente.
 
+\section{Il collegio del contatto}
+
+\begin{DndReadAloud}
+
+\end{DndReadAloud}
+
+\subsection{}
