Però, quanto a te, quanto a quello che non puoi committare che tu, qualcosa che tu possa pushare ci dovrebbe essere, ma non ti costringerà nessuno. Pensa da te stesso, decidi da te stesso, quello che adesso tu stesso debba syncare.

--- a/Guida.tex
+++ b/Guida.tex
@@ -100,10 +100,8 @@
 
 \input{data/Eovras/Mythrenwald.tex}
 
-\input{data/Eovras/Konepolis.tex}
+%\part{Nemici e Pericoli}
 
-\part{Nemici e Pericoli}
-
-\input{data/Pericoli/Placeholder.tex}
+%\input{data/Pericoli/Placeholder.tex}
 
 \end{document}
