--- a/data/Personaggi/Druido.tex
+++ b/data/Personaggi/Druido.tex
@@ -2,7 +2,7 @@
 
 \section{Privilegi di Classe Opzionali}
 
-\section{Circolo Sperimentale}
+\section{Circolo Druidico: Circolo Sperimentale}
 
 \begin{DndReadAloud}
   \it
