--- a/data/Personaggi/Ladro.tex
+++ b/data/Personaggi/Ladro.tex
@@ -11,7 +11,7 @@
 
 A partire dal 1° livello, se nella narrazione non è specificato che stia facendo qualcos'altro, il Ladro può effettuare una prova di Furtività con una CD di 35. \\ Se la supera (o ottiene un 20 naturale), si materializza nella scena attualmente narrata ed è considerato nascosto da tutte le creature coscienti. \\ Se lo ritiene opportuno e il giocatore non è presente, il DM può effettuare questa prova al posto del giocatore.
 
-\section{Il Camminatore delle Ombre}
+\section{Archetipo Ladresco: il Camminatore delle Ombre}
 
 \DndDropCapLine{S}{}arà capitato a tutti nelle proprie avventure di ritrovarsi nel party un Ladro, generalmente un halfling, che paradossalmente si rivelasse inutile nel momento del bisogno (peraltro nel suo elemento naturale, l'oscurità) data la sua mancanza inspiegabile di Scurovisione. Ispirato da queste edificanti esperienze, ho deciso di darvi questo nuovo archetipo ladresco, il Camminatore delle Ombre!
 
