--- a/data/Personaggi/Monaco.tex
+++ b/data/Personaggi/Monaco.tex
@@ -7,8 +7,6 @@
 
 \section{Privilegi di Classe Opzionali}
 
-\DndDropCapLine{A}{}h, il Monaco, una delle mie classi preferite da giocare, purtroppo a mio parere un po' troppo underpowered in termini di disponibilità di risorse e dipendenza dalle statistiche, quindi visto il mio grande amore per questa classe ho deciso di buffarla perchè sì.
-
 \subsection{Riserva di ki aumentata}
 
 Il numero massimo di punti ki di un Monaco è pari al suo livello + il suo bonus di competenza.
@@ -17,7 +15,7 @@ Il numero massimo di punti ki di un Monaco è pari al suo livello + il suo bonus
 
 Un Monaco competente può usare un punto ki per aggiungere il suo modificatore di Destrezza alle prove di caratteristica di Atletica per afferrare una creatura.
 
-\section{Via dell'Ombra Redenta}
+\section{Tradizione Monastica: Via dell'Ombra Redenta}
 
 \subsection{Pentimento e Redenzione}
 
