--- a/data/Personaggi/Paladino.tex
+++ b/data/Personaggi/Paladino.tex
@@ -5,7 +5,7 @@
 \subsection{Imposizione delle mani}
 Invece di avere una riserva di punti ferita pari a cinque volte il suo livello da Paladino, il Paladino possiede una riserva di punti ferita pari al suo livello da Paladino in d6, che tira al termine di ogni riposo lungo.
 
-\section{Giuramento di Veramente Vera Verità}
+\section{Giuramento Divino: Giuramento di Veramente Vera Verità}
 
 \textit{In accordo alla sua natura, questa sottoclasse è stata generata da un'intelligenza artificiale e ovviamente corretta dal sottoscritto}
 
