--- a/data/Personaggi/Bardo.tex
+++ b/data/Personaggi/Bardo.tex
@@ -2,13 +2,13 @@
 
 \section{Privilegi di Classe Opzionali}
 
-\section{Il Giocatore d'Azzardo}
+\section{Collegio Bardico: Collegio dei Ludopatici Anonimi}
 
 \subsection{Antinormalità}
 
 Ogni volta che il bardo effettua una prova di caratteristica, un tiro salvezza o un tiro per colpire, tira due volte e deve usare il risultato più lontano da 10; se il risultato del dado è minore di 10, sottrae il suo modificatore, mentre se è maggiore di 10 lo aggiunge normalmente.
 
-\section{Il collegio del contatto}
+\section{Collegio Bardico: Collegio del Primo Contatto}
 
 \begin{DndReadAloud}
 
