--- a/data/Personaggi/Stregone.tex
+++ b/data/Personaggi/Stregone.tex
@@ -21,10 +21,10 @@ Innanzitutto, si possono usare più opzioni di metamagia nello stesso turno a me
 \subsubsection{Incantesimo reattivo}
 Lo Stregone può spendere 4 punti stregoneria per lanciare un incantesimo di 3° livello o inferiore (anche lanciato a livello più alto) come reazione ma durante il suo turno. Questa opzione può essere usata solo una volta per round.
 
-\subsubsection*{Incantesimo leggendario}
+\subsubsection{Incantesimo leggendario}
 Lo Stregone può spendere 4 punti stregoneria per lanciare un incantesimo di 3° livello o inferiore (anche lanciato a livello più alto) come azione leggendaria (ovvero in qualsiasi momento del round). Questa opzione può essere usata solo una volta per round.
 
-\section{Dinastia di Analisti}
+\section{Origine Stregonesca: Dinastia di Analisti}
 
 \begin{DndReadAloud}
   \it
@@ -53,7 +53,7 @@ A partire dal 14° livello, l'Analista inizia ad interessarsi all'Analisi comple
 
 A partire dal 18° livello, all'inizio del suo turno lo Stregone può spendere 13 punti stregoneria per sovraccaricarsi di energia magica come azione gratuita. \\ Fino alla fine dello stesso turno, tutti i tiri per i danni da lui inflitti sono massimizzati (a meno di TS superati) e tutti gli incantesimi da lui lanciati che richiedono un tiro per colpire colpiscono automaticamente.
 
-\section{Cavaliere della Trama}
+\section{Origine Stregonesca: Cavaliere della Trama}
 \textit{Questa origine stregonesca non è di mia invenzione, è un'origine homebrew piuttosto popolare che includo e ribilancio qui al fine di includerla nelle mie campagne}
 
 \begin{DndReadAloud}
