--- a/data/Personaggi/Guerriero.tex
+++ b/data/Personaggi/Guerriero.tex
@@ -2,4 +2,18 @@
 
 \section{Privilegi di Classe Opzionali}
 
-\section{Archetipo Marziale: }
+\section{Archetipo Marziale: Protetto dalla Valchiria}
+
+\subsection{Senza Paura}
+A partire dal 3° livello, il Guerriero è immune alla condizione di "Spaventato" e supera in automatico le prove di Carisma contro le prove di Intimidazione (Carisma) delle altre creature.
+
+\subsection{7° liv}
+
+\subsection{10° liv}
+
+\subsection{15}
+A partire dal 15° livello, una volta per riposo breve, il Guerriero può usare la sua azione per invocare l'aiuto di una Valchiria.
+Per il prossimo minuto, può lanciare a volontà l'incantesimo \textit{Scudo} usando la sua reazione, le sue prove di caratteristica sono considerate influenzate dall'azione di \textit{Aiuto} da parte di una creatura invisibile
+
+\subsection{18}
+A partire dal 18° livello, quando tira per iniziativa, il Guerriero può usare la sua reazione per evocare Brunilde. \\ Essa viene considerata una creatura alleata e viene congedata fino al combattimento successivo quando il combattimento termina o i suoi punti ferita finiscono.
