Però, quanto a te, quanto a quello che non puoi committare che tu, qualcosa che tu possa pushare ci dovrebbe essere, ma non ti costringerà nessuno. Pensa da te stesso, decidi da te stesso, quello che adesso tu stesso debba syncare.

--- a/data/Eovras/Mythrenwald.tex
+++ b/data/Eovras/Mythrenwald.tex
@@ -87,7 +87,7 @@ Sono in pochi coloro che sanno che in realtà Halimath è giunto a Eovras quando
   
       \DndMonsterSection{Azioni}
       \DndMonsterAction{Multiattacco}
-      Halimath compie tre attacchi da mischia.
+      Halimath effettua tre attacchi da mischia.
   
       %Default values are shown commented out
       \DndMonsterAttack[
