--- a/data/Personaggi/Guerriero.tex
+++ b/data/Personaggi/Guerriero.tex
@@ -16,4 +16,75 @@ A partire dal 15° livello, una volta per riposo breve, il Guerriero può usare 
 Per il prossimo minuto, può lanciare a volontà l'incantesimo \textit{Scudo} usando la sua reazione, le sue prove di caratteristica sono considerate influenzate dall'azione di \textit{Aiuto} da parte di una creatura invisibile
 
 \subsection{18}
-A partire dal 18° livello, quando tira per iniziativa, il Guerriero può usare la sua reazione per evocare Brunilde. \\ Essa viene considerata una creatura alleata e viene congedata fino al combattimento successivo quando il combattimento termina o i suoi punti ferita finiscono.
+A partire dal 18° livello, quando tira per iniziativa, il Guerriero può usare la sua reazione per evocare Brunilde. \\ Essa viene considerata una creatura alleata e viene congedata fino al combattimento successivo quando il combattimento termina o i suoi punti ferita finiscono. Se i punti ferita del Guerriero scendono a 0, Brunilde userà il suo privilegio \textit{Soccorso Divino} e lancerà il trucchetto \textit{Colpo di Grazia} come parte della stessa reazione.
+
+\begin{DndMonster}[float*=b,width=\textwidth + 8pt]{Brunilde, la Valchiria}
+    \begin{multicols}{2}
+      \DndMonsterType{Celestiale, legale neutrale}
+  
+      % If you want to use commas in the key values, enclose the values in braces.
+      \DndMonsterBasics[
+          armor-class = {20 (armatura completa e scudo)},
+          hit-points  = {\DndDice{20d10 + 100}},
+          speed       = {9 m, volo 12 m},
+        ]
+  
+      \DndMonsterAbilityScores[
+          str = 20,
+          dex = 18,
+          con = 20,
+          int = 12,
+          wis = 16,
+          cha = 14,
+        ]
+  
+      \DndMonsterDetails[
+          saving-throws = {For +11, Des +10, Cos +11, Sag +9},
+          %damage-vulnerabilities = {cold},
+          damage-resistances = {Radiosi, danni da attacchi con armi non magiche},
+          %damage-immunities = {poison},
+          condition-immunities = {Avvelenata, ogni malattia},
+          senses = {Vista Pura 36m, vista cieca 18 m. Percezione Passiva 19},
+          languages = {Tutti i linguaggi},
+          challenge = 10,
+        ]
+      % Traits
+  
+      \DndMonsterAction{Incantesimi innati}
+      Brunilde può lanciare alcuni incantesimi innatamente. La CD del tiro salvezza contro questi incantesimi è 19.
+      \begin{DndMonsterSpells}
+        \DndMonsterSpellLevel{Colpo di Grazia, Guida, Resistenza, Salvare i Morenti}
+        \DndMonsterSpellLevel[1]{Benedizione, Cerimonia, Duello Obbligato, Eroismo, Scudo della Fede}
+        \DndMonsterSpellLevel[2]{Aiuto, Trova Cavalcatura}
+        \DndMonsterSpellLevel[3]{Manto del Crociato}
+        \DndMonsterSpellLevel[5]{Comunione, Santificare, Scrutare}
+        \DndMonsterSpellLevel[7]{Forma Eterea}
+      \end{DndMonsterSpells}
+
+      \DndMonsterSection{Azioni}
+      \DndMonsterAction{Multiattacco}
+      Brunilde compie due attacchi da mischia.
+
+      \DndMonsterAttack[
+        name=Lancia,
+        distance=melee, % valid options are in the set {both,melee,ranged},
+        type=weapon, %valid options are in the set {weapon,spell}
+        mod=+11,
+        %reach=3
+        %range=9/36,
+        targets=bersaglio singolo,
+        dmg=\DndDice{1d10+5},
+        dmg-type=perforanti, magici,
+        %plus-dmg=\DndDice{1d8},
+        %plus-dmg-type=Radiosi,
+        %or-dmg=,
+        %or-dmg-when=,
+        %extra=,
+      ]
+  
+      \DndMonsterAction{Soccorso divino}
+      Brunilde può teletrasportarsi con una reazione davanti al guerriero che l'ha evocata e lanciare l'incantesimo \textit{Scudo} come parte della stessa reazione.
+
+  
+    \end{multicols}
+  \end{DndMonster}
