Però, quanto a te, quanto a quello che non puoi committare che tu, qualcosa che tu possa pushare ci dovrebbe essere, ma non ti costringerà nessuno. Pensa da te stesso, decidi da te stesso, quello che adesso tu stesso debba syncare.

--- a/data/Personaggi/Guerriero.tex
+++ b/data/Personaggi/Guerriero.tex
@@ -70,13 +70,13 @@ A partire dal 18° livello, quando tira per iniziativa, il Guerriero può usare 
         distance=melee, % valid options are in the set {both,melee,ranged},
         type=weapon, %valid options are in the set {weapon,spell}
         mod=+11,
-        %reach=3
-        %range=9/36,
+        reach=3
+        range=9/36,
         targets=bersaglio singolo,
         dmg=\DndDice{1d10+5},
         dmg-type=perforanti, magici,
-        %plus-dmg=\DndDice{1d8},
-        %plus-dmg-type=Radiosi,
+        plus-dmg=\DndDice{1d8},
+        plus-dmg-type=Radiosi,
         %or-dmg=,
         %or-dmg-when=,
         %extra=,
