--- a/data/Personaggi/Incantesimi.tex
+++ b/data/Personaggi/Incantesimi.tex
@@ -14,7 +14,8 @@ Il bonus della CA garantito da \textit{Scudo} non è più un +5 ma pari al bonus
 
 \DndDropCapLine{L}{}a più grande fonte di flessibilità in D\&D è la gargantuesca lista di incantesimi fornita dal \textit{Manuale del Giocatore}, per non parlare delle innumerevoli espansioni presenti negli altri manuali ufficiali. \\ Detto questo, sembra che giocatori e dungeon master non facciano altro che aggiungere incantesimi su incantesimi, non ce la si fa più. Figuriamoci se io e i miei giocatori non ne abbiamo aggiunti a nostra volta.
 
-\subsection{Trucchetti}
+\subsection{Trucchetti} 
+Colpo di Grazia
 
 \subsection{Incantesimi}
 \paragraph{1° livello}
@@ -31,6 +32,14 @@ Il bonus della CA garantito da \textit{Scudo} non è più un +5 ma pari al bonus
 \paragraph{12° livello} \textit{Questi incantesimi sono paragonabili all'intervento di Eru Iluvatar}
 
 \section{Descrizione degli incantesimi}
+
+\DndSpellHeader%
+  {Colpo di Grazia}
+  {Trucchetto di Necromanzia}
+  {1 azione}
+  {Contatto}
+  {V,S,M (Un'arma che non viene consumata)}
+L'incantatore esegue un rito su una creatura a 0 punti ferita, stabile o meno, e la uccide, mandando la sua anima nel Walhalla (o in un luogo ultraterreno equivalente). \\ Una creatura uccisa in questo modo non può essere resa un non morto e non può essere riportata in vita se non dall'intervento di una divinità o dall'incantesimo \textit{Desiderio}.
 
 \DndSpellHeader%
   {Limita Magie}
