Però, quanto a te, quanto a quello che non puoi committare che tu, qualcosa che tu possa pushare ci dovrebbe essere, ma non ti costringerà nessuno. Pensa da te stesso, decidi da te stesso, quello che adesso tu stesso debba syncare.

--- a/data/Personaggi/Incantesimi.tex
+++ b/data/Personaggi/Incantesimi.tex
@@ -39,7 +39,7 @@ Colpo di Grazia
   {1 azione}
   {Contatto}
   {V,S,M (Un'arma che non viene consumata)}
-L'incantatore esegue un rito su una creatura a 0 punti ferita, stabile o meno, e la uccide, mandando la sua anima nel Walhalla (o in un luogo ultraterreno equivalente). \\ Una creatura uccisa in questo modo non può essere resa un non morto e non può essere riportata in vita se non dall'intervento di una divinità o dall'incantesimo \textit{Desiderio}.
+L'incantatore esegue un rito su una creatura a 0 punti ferita, stabile o meno, e la uccide, mandando la sua anima nel Walhalla (o in un luogo ultraterreno equivalente).\\ Fino al prossimo riposo lungo, l'arma utilizzata viene considerata magica al fine di ignorare le resistenze ai danni da armi non magiche e in sintonia con l'incantatore, i suoi colpi infliggono 1d4 danni radiosi aggiuntivi contro i non morti. \\ Una creatura uccisa in questo modo non può essere resa un non morto e non può essere riportata in vita se non dall'intervento di una divinità o dall'incantesimo \textit{Desiderio}.
 
 \DndSpellHeader%
   {Limita Magie}
