--- a/data/Personaggi/Talenti.tex
+++ b/data/Personaggi/Talenti.tex
@@ -13,8 +13,13 @@
 \subparagraph*{Zona Specchio} Un numero di volte pari al suo bonus di competenza per riposo lungo, il personaggio può usare un'azione bonus per scambiarsi di posto con una creatura umanoide di taglia comparabile che egli sia in grado di vedere.\\
 \paragraph{Precisazione} A mio parere, quando una creatura attraverso un effetto di una di queste regioni ottiene la capacità di usare un privilegio o lanciare un incantesimo, è molto più divertente tenere a mente che non lo sa. Ad esempio, se uscisse un risultato di 96-100 come effetto della regione di \textit{Magia Sfibrata}, il personaggio non sarebbe a conoscenza di essere in grado di lanciare una volta l'incantesimo \textit{Desiderio}, e potrebbe ritrovarsi a sprecare questa chance o usarla in modo stupido, ad esempio con un "Come vorrei..." retorico.
 
-\subsection{Negazione divina}
+\subsection{Forma animale}
+Il personaggio ottiene la capacità di trasformarsi a volontà in una creatura di GS inferiore a 1 e senza velocità di volo predeterminata alla scelta di questo talento e apprende il linguaggio silvano.\\
+Se non è incapacitato, può usare un'azione bonus per trasformare sè stesso nella sua forma animale e viceversa. L'equipaggiamento che indossa sparisce (a meno che non lo voglia esplicitamente) ma i suoi effetti no.\\
+Mantiene i suoi punti ferita, le sue statistiche e i suoi privilegi di classe (ammesso che possa concepibilmente utilizzarli in quella forma).\\
+Mantiene la capacità di comprendere i linguaggi che conosceva già, ma può comunicare solo telepaticamente se ne è in grado di farlo o in silvano.\\
 
+\subsection{Negazione divina}
 \paragraph{Prerequisiti}Essere un negoziante nell'esercizio della sua professione e nella protezione della sua attività.
 \paragraph{Aumento dei punteggi di caratteristica} Fintanto che i requisiti di questo talento sono soddisfatti, i punteggi di caratteristica del personaggio diventano tutti 20.
 \paragraph{Competenze bonus}Fintanto che i requisiti di questo talento sono soddisfatti, il personaggio diventa competente in tutte le abilità.
