Però, quanto a te, quanto a quello che non puoi committare che tu, qualcosa che tu possa pushare ci dovrebbe essere, ma non ti costringerà nessuno. Pensa da te stesso, decidi da te stesso, quello che adesso tu stesso debba syncare.

--- a/data/Personaggi/Monaco.tex
+++ b/data/Personaggi/Monaco.tex
@@ -15,6 +15,14 @@ Il numero massimo di punti ki di un Monaco è pari al suo livello + il suo bonus
 
 Un Monaco competente può usare un punto ki per aggiungere il suo modificatore di Destrezza alle prove di caratteristica di Atletica per afferrare una creatura.
 
+\subsection{Volontà infrangibile}
+
+La volontà dei Monaci più esperti è talmente ferrea da poter superare ogni barriera mortale. A partire dal 14° livello, quando muore in combattimento, il ki di un Monaco può essere completamente liberato, consentendogli di rialzarsi per continuare a combattere.\\ Quando un Monaco fallisce il suo ultimo tiro salvezza contro morte, può rialzarsi recuperando tutti i suoi punti ki e agire nello stesso turno, con le seguenti condizioni: \\
+\paragraph{Aura bruciante} All'inizio di ogni suo turno, il Monaco tira il suo dado da Monaco e perde quel numero di punti ki. Quando li ha esauriti, muore e non può essere resuscitato se non dall'incantesimo \textit{Desiderio} o dall'intervento di una divinità. Per via del calore immenso generato dalla sua aura che si consuma, ogni contatto con il Monaco procura 1d4 danni da fuoco.
+\paragraph{Furia rediviva} Mentre si trova in questo stato, il Monaco è immune a ogni danno e supera automaticamente ogni tiro salvezza contro le influenze mentali. Durante il suo turno è costretto a seguire il corso d'azioni che più si avvicini alle sue ultime volontà, senza possibilità di cambiare idea.
+\paragraph{Perdita di controllo} Mentre si trova in questo stato, il Monaco non può spendere nessun punto ki, il suo bonus di competenza diventa pari a 0 e non può comunicare in nessun linguaggio.
+\paragraph{Potenza sovraumana} Mentre il Monaco si trova in questo stato, il bonus alla sua velocità di movimento di \textit{Movimento senza armatura} raddoppia, possiede vantaggio ai tiri salvezza su Forza, Destrezza e Costituzione, ogni sua azione di attacco gli garantisce tre attacchi e può usare un'azione bonus per effettuarne altri due.
+
 \section{Tradizione Monastica: Via dell'Ombra Redenta}
 
 \subsection{Pentimento e Redenzione}
